NM-5601 charge for expenses

--- a/app/views/shared/payment_methods/_credit_card.html.haml
+++ b/app/views/shared/payment_methods/_credit_card.html.haml
@@ -15,7 +15,9 @@
     %div{ class: new_cc_klass }
       = f.simple_fields_for :credit_card_attributes, credit_card do |form|
 
-        = form.error :base
+        .has-error
+          = f.error :base
+          = form.error :base
 
         .nm-new-credit-card-form-header
           %h3= t 'payments.heading'
