--- a/app/community_views/dashboard/projects/_form.html.haml
+++ b/app/community_views/dashboard/projects/_form.html.haml
@@ -69,7 +69,7 @@
     - if current_user.id == f.object.creator_id
       = f.input :seek_collaborators, as: :switch, wrapper_html: { class: 'sep' }
 
-    - if (current_user.id == f.object.creator_id ? @transactable.transactable_collaborators : current_user.transactable_collaborators.where(project: f.object)).count > 0
+    - if (current_user.id == f.object.creator_id ? @transactable.transactable_collaborators : current_user.transactable_collaborators.where(transactable: f.object)).count > 0
       %table.collaborators-listing-a
         %thead
           %tr
@@ -80,7 +80,7 @@
             %th
               = t :actions
         %tbody
-          = render partial: 'dashboard/company/transactable_collaborators/transactable_collaborator', collection: (current_user.id == f.object.creator_id ? @transactable.transactable_collaborators : current_user.transactable_collaborators.find_by(project: f.object))
+          = render partial: 'dashboard/company/transactable_collaborators/transactable_collaborator', collection: (current_user.id == f.object.creator_id ? @transactable.transactable_collaborators : current_user.transactable_collaborators.find_by(transactable: f.object))
 
     - if current_user.id == f.object.creator_id
       #new_collaborators
