NM-5613 Difference between qa-2 and production in accepting project invitation

--- a/app/views/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
+++ b/app/views/transactable_mailer/transactable_owner_added_collaborator_email.html.liquid
@@ -6,5 +6,5 @@
   Learn more about the listing.
 </p>
 
-<p><a href="{{ transactable.listing_url }}" >Accept | Decline invitation</a></p>
+<p><a href="{{ user.profile_url }}#transactables" >Accept | Decline invitation</a></p>
 
