--- a/app/views/transactable_mailer/transactable_owner_added_collaborator_email.text.liquid
+++ b/app/views/transactable_mailer/transactable_owner_added_collaborator_email.text.liquid
@@ -3,5 +3,5 @@ Hi {{ user.first_name }},
 {{ owner.name }} ({{ owner.profile_url }})  has invited you to become a collaborator on {{ transactable.name }} ({{ transactable.listing_url }}).
 Learn more about the listing.
 
-Accept | Decline invitation ({{ transactable.listing_url }})
+Accept | Decline invitation ({{ user.profile_url }}#transactables)
 
