--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -18,7 +18,7 @@
           = link_to '#activity', role: "tab", :'data-toggle' => "tab" do
             = t(:activity)
         %li
-          = link_to '#projects', role: "tab", :'data-toggle' => "tab" do
+          = link_to '#transactables', role: "tab", :'data-toggle' => "tab" do
             = t :projects
             %small= "(#{@all_transactables.total_count})"
         %li
@@ -51,13 +51,13 @@
   #activity.tab-pane.fade{:role => "tabpanel"}
     = render 'show_activity', object: @user, feed: @feed
 
-  #projects.tab-pane.fade{:role => "tabpanel"}
+  #transactables.tab-pane.fade{:role => "tabpanel"}
     / content wrapper
     .wrap-a.reduce-top
       .contain
         / white box
         .box-a
-          = render 'shared/show_transactables', transactables: @all_transactables, container: '#projects', see_more_route: see_more_transactables_path(id: @user.id, type: @user.class.name, container: '#projects'), sort_options: Transactable::SORT_OPTIONS + ['Pending approvals']
+          = render 'shared/show_transactables', transactables: @all_transactables, container: '#transactables', see_more_route: see_more_transactables_path(id: @user.id, type: @user.class.name, container: '#transactables'), sort_options: Transactable::SORT_OPTIONS + ['Pending approvals']
 
   #groups.tab-pane.fade{:role => "tabpanel"}
     .wrap-a.reduce-top
