Updated volte rake task

--- a/lib/tasks/volte/content_holders/head_bottom.liquid
+++ b/lib/tasks/volte/content_holders/head_bottom.liquid
@@ -1,3 +1,9 @@
+---
+name: Head
+inject_pages: any_page
+position: head_bottom
+---
+
 <link rel='stylesheet' media='screen' href='https://rawgit.com/mdyd-dev/marketplaces/master/volte/dist/css/style.css'>
 
 <!-- <link rel='stylesheet' media='screen' href='http://localhost:8000/css/style.css'> -->
