--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -1,3 +1,6 @@
+---
+partial: false
+---
 <section class="home-hero">
   <div class="slideshow">
     <div class="slideshow-image slideshow-image-1"></div>
