NM-5620 Fixed duplicated tab names in transactables listing

--- a/app/views/dashboard/company/transactables/index.html.liquid
+++ b/app/views/dashboard/company/transactables/index.html.liquid
@@ -18,7 +18,7 @@
 {% content_for 'panel_navigation_links' %}
   {% for tt in platform_context.transactable_types %}
     <li class='{{ tt.id | active_class:transactable_type.id }}'>
-      <a href='{{ tt.transactable_types_path }}'>{{ 'dashboard.manage_listings.tab' | translate: default: transactable_type.bookable_noun_plural }}</a>
+      <a href='{{ tt.transactable_types_path }}'>{{ 'dashboard.manage_listings.tab' | translate: default: tt.bookable_noun_plural }}</a>
     </li>
   {% endfor %}
 {% endcontent_for %}
