--- a/app/frontend/stylesheets/components/_tags.scss
+++ b/app/frontend/stylesheets/components/_tags.scss
@@ -2,7 +2,7 @@
 
 $tags-border-radius: 4px;
 $tags-default-color: #1a7fbb;
-$tags-text-shadow: 1px -1px rgba(0,0,0,.4);
+$tags-text-shadow: 1px -1px rgba(0, 0, 0, 0.4);
 $tags-border: 1px solid #ccc;
 
 .token-input-list {
@@ -16,7 +16,7 @@ $tags-border: 1px solid #ccc;
     margin: 0;
     padding: 3px 12px;
     border: $tags-border;
-    line-height:1;
+    line-height: 1;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 
@@ -77,7 +77,7 @@ $tags-border: 1px solid #ccc;
     overflow: hidden;
     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.6);
     cursor: default;
-    font-size:13px;
+    font-size: 13px;
     z-index: 1;
 
     p {
@@ -89,6 +89,7 @@ $tags-border: 1px solid #ccc;
     ul {
         margin: 0;
         padding: 0;
+
         li {
             background-color: #fff;
             padding: 3px 8px;
@@ -97,13 +98,14 @@ $tags-border: 1px solid #ccc;
             &.token-input-dropdown-item {
                 background-color: #fafafa;
             }
+
             &.token-input-dropdown-item2 {
                 background-color: #fff;
             }
 
             &.token-input-selected-dropdown-item {
                 background-color: lighten($tags-default-color, 30%);
-                color:#fff;
+                color: #fff;
             }
 
             em {
@@ -125,60 +127,49 @@ $tags-border: 1px solid #ccc;
 
 // Tags filters
 
-
 .tags-filters {
+    padding-top: 12px;
     list-style: none;
-    width:80%;
-    float:left;
+    width: 80%;
+    float: left;
 
     li.tag-filter-link {
         display: inline-block;
         position: relative;
-        padding-left: 5px;
-        margin-top:12px;
 
         a {
-            color:#bbb;
+            color: #bbb;
             text-align: center;
         }
 
         &:after {
             content: "|";
-            top: 0;
-            right: -5px;
-            width: 5px;
-            height: 20px;
-            text-align: center;
-            position: absolute;
+            margin: 0 10px;
             font-weight: 300;
             color: #ddd;
         }
 
         &:last-child:after {
-            content: "";
+            display: none;
         }
 
         .selected {
             color: $tags-default-color;
-            position:relative;
-            padding-right:17px;
+            position: relative;
 
             &:after {
-                height: 14px;
-                width: 14px;
-                top:6px;
-                right:0;
-                position: absolute;
-                content: "x";
+                height: 16px;
+                width: 16px;
+                content: "\00d7";
                 background: $tags-default-color;
-                text-shadow: $tags-default-color;
-                line-height: 12px;
-                font-size: 13px;
-                margin-left: 3px;
+                text-shadow: none;
                 display: inline-block;
+                line-height: 16px;
+                text-align: center;
                 vertical-align: middle;
                 border-radius: 100%;
                 color: #fff;
+                margin-left: 5px;
             }
         }
     }
