--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -196,8 +196,8 @@
                                         <h3>Bio</h3>
                                         {% if user.buyer_properties.bio.size > 350 %}
                                            <div data-shorten-description>
-                                            <p data-description>{{ user.buyer_properties.bio | slice: 0, 350 }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
-                                            <div style='display: none;'  class="rest_of_text">{{ user.buyer_properties.bio | slice: 350, user.buyer_properties.bio.size }}</div>
+                                            <p data-description>{{ user.buyer_properties.bio | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
+                                            <div style='display: none;'  class="rest_of_text">{{ user.buyer_properties.bio | slice: 350, user.buyer_properties.bio.size | nl2br }}</div>
                                           </div>
                                         {% else %}
                                           <p>{{ user.buyer_properties.bio }}</p>
