NM-5624 Select fields in credit card form will now work once again

--- a/app/frontend/stylesheets/shared/payment_methods/_credit_card.scss
+++ b/app/frontend/stylesheets/shared/payment_methods/_credit_card.scss
@@ -11,7 +11,16 @@
         }
 
         .controls {
+            position: relative;
             margin-left: 0;
+
+            select.hasCustomSelect {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100% !important;
+                height: 100% !important;
+            }
         }
     }
 }
