--- a/app/frontend/stylesheets/shared/payment_methods/_credit_card.scss
+++ b/app/frontend/stylesheets/shared/payment_methods/_credit_card.scss
@@ -12,7 +12,10 @@
 
         .controls {
             position: relative;
-            margin-left: 0;
+
+            .form-horizontal & {
+                margin-left: 0;
+            }
 
             select.hasCustomSelect {
                 position: absolute;
@@ -27,7 +30,7 @@
 
 .form-horizontal .nm-new-credit-card-form {
     @media (min-width: 960px) {
-        margin-left: 200px;
+        margin-left: 160px;
     }
 }
 
