NM-5631 Disabled form autocomplete for password in user profile

--- a/app/views/registrations/attributes/_password.html.haml
+++ b/app/views/registrations/attributes/_password.html.haml
@@ -1,4 +1,4 @@
 - if only_inputs.empty? || only_inputs.include?(:password)
-  = f.input :password, :label => (f.object.persisted? ? t('general.change_password') : t('general.password') )
-  = f.input :password_confirmation, :label => t('general.password_confirmation')
+  = f.input :password, :label => (f.object.persisted? ? t('general.change_password') : t('general.password') ), input_html: { autocomplete: 'off' }
+  = f.input :password_confirmation, :label => t('general.password_confirmation'), input_html: { autocomplete: 'off' }
 
