--- a/app/views/registrations/_form.html.haml
+++ b/app/views/registrations/_form.html.haml
@@ -1,4 +1,4 @@
-= dashboard_simple_form_for resource, :as => resource_name, :url => registration_path(resource_name), :html => { class: "form-expandable", :"data-includes-address-field" => true } do |f|
+= dashboard_simple_form_for resource, :as => resource_name, :url => registration_path(resource_name), :html => { class: "form-expandable", :"data-includes-address-field" => true, autocomplete: 'off' } do |f|
   = f.simple_fields_for :buyer_profile do |buyer_profile_form|
     = buyer_profile_form.simple_fields_for :properties, @buyer_profile.properties do |buyer_properties_form|
       = f.simple_fields_for :seller_profile do |seller_profile_form|
