--- a/app/views/shared/components/_flag_as_inappropriate.html.haml
+++ b/app/views/shared/components/_flag_as_inappropriate.html.haml
@@ -1,7 +1,6 @@
-%h4
-  Inappropriate report
-
-%br
+%header.dialog__header
+  %h2#dialog__title
+    Inappropriate report
 
 = simple_form_for :inappropriate_report, :url => inappropriate_reports_path(id: @reportable.id, reportable_type: @reportable.class.to_s) do |f|
   = f.input :reason, as: :text
