--- a/lib/tasks/uot/templates/dashboard_company_transactables_sme_listing.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_sme_listing.liquid
@@ -35,16 +35,20 @@
       <div class="col-md-8">
         <dl class="properties">
 
-          <dt>Contact</dt>
-          <dd>
-            {{ transactable.properties.project_contact }}
-            {% if transactable.creator.seller_properties['linkedin_url'] != blank %}
-               | <a href="{{ transactable.creator.seller_properties['linkedin_url'] }}" target="_blank">LinkedIn Bio</a>
-            {% endif %}
-          </dd>
+          {% if transactable.properties.project_contact != blank %}
+              <dt>Contact</dt>
+              <dd>
+                {{ transactable.properties.project_contact }}
+                {% if transactable.creator.seller_properties['linkedin_url'] != blank %}
+                   | <a href="{{ transactable.creator.seller_properties['linkedin_url'] }}" target="_blank">LinkedIn Bio</a>
+                {% endif %}
+              </dd>
+          {% endif %}
 
-          <dt>Company</dt>
-          <dd>{{ transactable.creator.company_name }}</dd>
+          {% if transactable.creator.company_name != blank %}
+              <dt>Company</dt>
+              <dd>{{ transactable.creator.company_name }}</dd>
+          {% endif %}
 
           <dt>Invite sent</dt>
           <dd>{{ collaborator.approved_by_owner_at | to_date | l: 'short' }}</dd>
@@ -75,21 +79,24 @@
           <dt>Approx. Time to Complete</dt>
           <dd>{{ transactable.properties.estimation }}</dd>
         </dl>
-
-        <h4>Description</h4>
-        {% if transactable.description.size > 350 %}
-           <div data-shorten-description>
-            <p data-description>{{ transactable.description | slice: 0, 350 }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
-            <div style='display: none;'  class="rest_of_text">{{ transactable.description | slice: 350, transactable.description.size }}</div>
-          </div>
-        {% else %}
-          <p>{{ transactable.description }}</p>
-        {% endif %}
       </div>
       <div class="col-md-4">
         {% include 'dashboard/company/transactables/sme_actions.html', order: orders.last %}
       </div>
     </div>
+
+    {% if transactable.description != blank %}
+        <hr>
+        <h4>Description:</h4>
+        {% if transactable.description.size > 350 %}
+           <div data-shorten-description>
+            <p data-description>{{ transactable.description | slice: 0, 350 | nl2br }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
+            <div style='display: none;'  class="rest_of_text">{{ transactable.description | slice: 350, transactable.description.size | nl2br }}</div>
+          </div>
+        {% else %}
+          <p>{{ transactable.description | nl2br }}</p>
+        {% endif %}
+    {% endif %}
 
     <hr>
 
