NM-5619 Fix jquery widgets load order

--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -1,22 +1,24 @@
-<header class="masthead wrapper-a">
-  <div class="topnav">
-    <a class="logo" href="#"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" /></a>
-    <nav role="nav">
-      <button class="topnav-toggle animated zoomIn">☰</button>
-      <ul>
-        <li class="active">
-          <a href="#">List your items</a>
-        </li>
-        <li>
-          <a href="#">FAQ</a>
-        </li>
-        <li>
-          <a href="#">Sign Up</a>
-        </li>
-        <li>
-          <a href="#">Log In</a>
-        </li>
-      </ul>
-    </nav>
+<header class="masthead">
+  <div class="wrapper-a">
+    <div class="topnav">
+      <a class="logo" href="./"><img alt="The Volte" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" /></a>
+      <nav role="nav">
+        <button class="topnav-toggle animated zoomIn">☰</button>
+        <ul>
+          <li class="active">
+            <a href="#">List your items</a>
+          </li>
+          <li>
+            <a href="./faq.html">FAQ</a>
+          </li>
+          <li>
+            <a href="#">Sign Up</a>
+          </li>
+          <li>
+            <a href="#">Log In</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </header>
