--- a/app/views/user_mailer/user_commented_on_group.html.liquid
+++ b/app/views/user_mailer/user_commented_on_group.html.liquid
@@ -1,3 +1,3 @@
 <h1>Hi,</h1>
 
-<p><a href="{{ user.profile_url }}">{{ user.name }}</a> commented on <a href="{{ group.show_url }}">{{ group.name }}.</a> Click <a href="{{ group.show_url }}#comments">here</a> to read and respond.</p>
+<p><a href="{{ commenter.profile_url }}">{{ commenter.name }}</a> commented on <a href="{{ group.show_url }}">{{ group.name }}.</a> Click <a href="{{ group.show_url }}#comments">here</a> to read and respond.</p>
