--- a/app/views/user_mailer/user_followed_user.html.liquid
+++ b/app/views/user_mailer/user_followed_user.html.liquid
@@ -1,3 +1,3 @@
 <h1>Hi,</h1>
 
-<p><a href="{{ user.profile_url }}">{{ user.name }}</a> started following <a href="{{ followed_user.profile_url }}#followers">You</a>.
+<p><a href="{{ follower_user.profile_url }}">{{ follower_user.name }}</a> started following <a href="{{ followed_user.profile_url }}#followers">You</a>.
