--- a/app/views/credit_cards/_credit_card_fields.html.haml
+++ b/app/views/credit_cards/_credit_card_fields.html.haml
@@ -31,5 +31,22 @@
   .col-sm-4
     = form.input :verification_value, label: t('payments.cc_fields.security_code'), required: true, input_html: { placeholder: 'CCV', class: 'sessioncamexclude', pattern: "[0-9]*", autocomplete: "off", 'data-card-code' => true, size: 3 }
 
+:javascript
+  $('.dialog__body').each(function(index, el){
+    el = $(el)
+    new_credit_card_form = el.find('.new-credit-card-form');
+    el.find('input.radio_buttons').on('change', function(event){
+      target = $(event.target);
+      if(target.val() == 'custom'){
+       new_credit_card_form.show();
+      }
+      else {
+       new_credit_card_form.hide();
+      }
+    });
+    $(el.find('input.radio_buttons:checked')).trigger('change')
+  });
+  $(document).trigger('init:creditcardform.nearme');
+
 - content_for :script do
   = javascript_include_tag "https://js.stripe.com/v1/"
