--- a/app/community_views/shared/_collaborators_button.html.haml
+++ b/app/community_views/shared/_collaborators_button.html.haml
@@ -3,6 +3,9 @@
 - if current_user.try(:id) == transactable.creator_id
   - # do nothing
 - elsif transactable_collaborator
-  = link_to t(:leave_project), listing_transactable_collaborator_path(transactable, transactable_collaborator), method: :delete , class: 'button-a small red', remote: true
+  - if transactable_collaborator.approved_by_user?
+    = link_to t(:leave_project), listing_transactable_collaborator_path(transactable, transactable_collaborator), method: :delete , class: 'button-a small red', remote: true
+  - else
+    = link_to t(:join_project), accept_listing_transactable_collaborator_path(id: transactable_collaborator, listing_id: transactable), class: 'button-a small red', remote: true
 - elsif transactable.seek_collaborators
   = link_to t(:join_project), listing_transactable_collaborators_path(transactable), method: :post , class: 'button-a small', remote: true
