fix 2 years old bug with overwriting variable, add new workflow step to group, fix typos

--- a/app/views/group_mailer/notify_members_of_new_member.html.liquid
+++ b/app/views/group_mailer/notify_members_of_new_member.html.liquid
@@ -1,1 +1,1 @@
-<p><a href="{{ user.profile_url }}">{{ user.name }}</a> has been approved as a group member on <a href="{{ group.show_url }}">{{ group.name }}</a>.</p>
+<p><a href="{{ enquirer.profile_url }}">{{ enquirer.name }}</a> has been approved as a group member on <a href="{{ group.show_url }}">{{ group.name }}</a>.</p>
