--- a/app/views/transactable_mailer/pending_approval.html.liquid
+++ b/app/views/transactable_mailer/pending_approval.html.liquid
@@ -1,5 +1,5 @@
 <h1>Hi {{ owner.first_name }},</h1>
 
-<p><a href="{{ enquirer.profile_url }}">{{ enquirer.name }}</a> would like join <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a>.
+<p><a href="{{ enquirer.profile_url }}">{{ enquirer.name }}</a> would like to join <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a>.
 <p>Check out their profile and see what you think. They might just be what you're looking for.</p>
 <p><a href="{{ transactable.manage_listing_url_with_tracking }}">Approve | Decline collaborator</a></p>
