--- a/app/views/dashboard/layout/_left_navigation.html.liquid
+++ b/app/views/dashboard/layout/_left_navigation.html.liquid
@@ -97,8 +97,8 @@
 
         {% if platform_context.bookable? %}
           {% assign orders_visible = 'dashboard/orders' | is_visible %}
-          {% assign orders_enabled = !platform_context.split_registration? or current_user.has_buyer_profile? %}
-          {% assign orders_show = orders_visible or orders_enabled %}
+          {% assign orders_enabled = current_user.has_buyer_profile? or platform_context.split_registration? == false %}
+          {% assign orders_show = orders_visible and orders_enabled %}
           {% assign orders_path = 'dashboard_orders_path' | generate_url %}
           {% assign orders_selected = current_path | matches: orders_path %}
           {% assign orders_received_visible = 'dashboard/orders_received' | is_visible %}
@@ -106,12 +106,12 @@
           {% assign orders_received_path = 'dashboard_company_orders_received_index_path' | generate_url %}
           {% assign orders_received_selected = current_path | matches: orders_received_path %}
 
-          {% if orders_show or orders_received_show %}
+          {% if (orders_visible and orders_enabled) or orders_received_show %}
             <li id="dashboard-nav-orders_header" class="{% if orders_selected or orders_received_selected %}selected{% endif %}">
               <span>{{ 'dashboard.nav.orders_header' | t }} {{ current_user.reservations_count }}</span>
 
               <ul>
-                {% if orders_show %}
+                {% if orders_visible and orders_enabled %}
                   <li id="dashboard-nav-orders" class="{% if orders_selected %}selected{% endif %}">
                     <a href="{{ orders_path }}">{{ 'dashboard.nav.orders' | t }}</a>
                   </li>
