--- a/app/views/reservation_mailer/notify_host_without_confirmation.html.liquid
+++ b/app/views/reservation_mailer/notify_host_without_confirmation.html.liquid
@@ -1,4 +1,4 @@
-<h2>Good news, {{ user.first_name }}!</h2>
+<h2>Good news, {{ host.first_name }}!</h2>
 
 <p>
 Your listing, '<a href="{{ listing.listing_url }}">{{ listing.name }}</a>', was just booked!
