--- a/app/views/registrations/attributes/_phones.html.haml
+++ b/app/views/registrations/attributes/_phones.html.haml
@@ -9,7 +9,7 @@
       = f.input :phone, as: :tel, required: f.object.validation_for(:phone).any? { |cv| cv.try(:is_required?) }, prefix: calling_code, input_html: { data: { 'phone': true, 'disabled-field-notice': I18n.t('dashboard.user_profile.phone_disabled_field_notice') }}
       %div{class: 'click-catcher'}
     %div{class: 'disabled-catch-container'}
-      = f.input :mobile_number, as: :tel, required: (f.object.validation_for(:phone).any? { cv.try(:is_required?) } || f.object.validation_for(:mobile_number).any? { |cv| cv.try(:is_required?) } ), input_html: { data: { 'mobile-number': true, 'disabled-field-notice': I18n.t('dashboard.user_profile.phone_disabled_field_notice') }}, prefix: calling_code
+      = f.input :mobile_number, as: :tel, required: (f.object.validation_for(:phone).any? { |cv| cv.try(:is_required?) } || f.object.validation_for(:mobile_number).any? { |cv| cv.try(:is_required?) } ), input_html: { data: { 'mobile-number': true, 'disabled-field-notice': I18n.t('dashboard.user_profile.phone_disabled_field_notice') }}, prefix: calling_code
       %div{class: 'click-catcher'}
 
     = label_tag do
