--- a/lib/tasks/volte/liquid_views/layouts--theme_footer.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_footer.liquid
@@ -1,82 +1,86 @@
 <footer class="mastfoot" itemscope="" itemtype="http://schema.org/Organization">
-  <div class="wrapper-a">
-    <ul class="description">
-      <li itemprop="logo">
-        <img src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" width="200" />
-      </li>
-      <li itemprop="description">
-        The Volte is a modern marketplace that allows you to invest in your style. Access to high end designer fashion has never been easier!
-      </li>
-    </ul>
-    <ul class="general">
-      <li>
-        General
-      </li>
-      <li>
-        <a href="./">Home</a>
-      </li>
-      <li>
-        <a href="./about_us.html">About</a>
-      </li>
-      <li>
-        <a href="./faq.html">FAQ</a>
-      </li>
-      <li>
-        <a href="./contact_us.html">Contact US</a>
-      </li>
-    </ul>
-    <ul class="more">
-      <li>
-        More
-      </li>
-      <li>
-        <a href="#Sign Up">Sign Up</a>
-      </li>
-      <li>
-        <a href="#List Your Items">List Your Items</a>
-      </li>
-      <li>
-        <a href="./tos.html">Terms of Use</a>
-      </li>
-      <li>
-        <a href="./policies.html">Policies</a>
-      </li>
-    </ul>
-    <ul class="connect">
-      <li>
-        Connect
-      </li>
-      <li itemprop="sameAs">
-        <a href="#"><i class="volte-icon-facebook"></i>Facebook</a>
-      </li>
-      <li itemprop="sameAs">
-        <a href="#"><i class="volte-icon-twitter"></i>Twitter</a>
-      </li>
-      <li itemprop="sameAs">
-        <a href="#"><i class="volte-icon-linkedin"></i>LinkedIn</a>
-      </li>
-      <li itemprop="sameAs">
-        <a href="#"><i class="volte-icon-googleplus"></i>Google+</a>
-      </li>
-      <li>
-        <a href="#"><i class="volte-icon-blog"></i>Blog</a>
-      </li>
-    </ul>
-    <ul class="contact">
-      <li>
-        Contact
-      </li>
-      <li>
-        <a href="mailto:support@thevolte.com" itemprop="email">support@thevolte.com</a>
-      </li>
-    </ul>
-    <div class="footer-bottom" role="contentinfo">
-      <p class="copyrights" itemprop="copyrightHolder">
-        &copy; The Volte 2016. All rights reserved.
-      </p>
-      <p class="powered-by">
-        <a href="http://www.near-me.com" rel="external">Powered by Near Me<img height="24" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/2772/near-me-logo.png" width="24" /></a>
-      </p>
+    <div class="wrapper-a">
+        <ul class="description">
+            <li itemprop="logo">
+                <img src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/attachment_file/data/2773/volte-logo.svg" width="200" />
+            </li>
+            <li itemprop="description">
+                The Volte is a modern marketplace that allows you to invest in your style. Access to high end designer fashion has never been easier!
+            </li>
+        </ul>
+        <ul class="general">
+            <li>
+                General
+            </li>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/about">About</a>
+            </li>
+            <li>
+                <a href="/faq">FAQ</a>
+            </li>
+            <li>
+                <a href="/contact">Contact US</a>
+            </li>
+        </ul>
+        <ul class="more">
+            <li>
+                More
+            </li>
+            <li>
+                <a href="#">Sign Up</a>
+            </li>
+            <li>
+                <a href="#">List Your Items</a>
+            </li>
+            <li>
+                <a href="/terms-of-use">Terms of Use</a>
+            </li>
+            <li>
+                <a href="/policies">Policies</a>
+            </li>
+        </ul>
+        <ul class="connect">
+            <li>
+                Connect
+            </li>
+
+            {% if platform_context.facebook_url != blank %}
+                <li><a href="{{ platform_context.facebook_url }}" itemprop="sameAs"><i class="volte-icon-facebook"></i> Facebook</a></li>
+            {% endif %}
+            {% if platform_context.twitter_url != blank %}
+                <li><a href="{{ platform_context.twitter_url }}" itemprop="sameAs"><i class="volte-icon-twitter"></i> Twitter</a></li>
+            {% endif %}
+            {% if platform_context.linkedin_url != blank %}
+                <li><a href="{{ platform_context.linkedin_url }}" itemprop="sameAs"><i class="volte-icon-linkedin"></i> LinkedIn</a></li>
+            {% endif %}
+            {% if platform_context.gplus_url != blank %}
+                <li><a href="{{ platform_context.gplus_url }}" itemprop="sameAs"><i class="volte-icon-googleplus"></i> Google+</a></li>
+            {% endif %}
+            {% if platform_context.blog_url != blank %}
+                <li><a href="{{ platform_context.blog_url }}"><i class="volte-icon-blog"></i> Blog</a></li>
+            {% endif %}
+        </ul>
+        <ul class="contact">
+            <li>
+                Contact
+            </li>
+            <li>
+                <a href="tel:{{ platform_context.phone_number_noformat }}" itemprop="telephone">{{ platform_context.phone_number }}</a>
+            </li>
+            <li>
+                <a href="mailto:{{ platform_context.support_email.downcase }}" itemprop="email">{{ platform_context.support_email }}</a>
+            </li>
+        </ul>
+        <div class="footer-bottom" role="contentinfo">
+            <p class="copyrights" itemprop="copyrightHolder">
+                &copy; The Volte 2016. All rights reserved.
+            </p>
+            <p class="powered-by">
+                <a href="http://www.near-me.com" rel="external">Powered by Near Me<img height="24" src="https://d2rw3as29v290b.cloudfront.net/instances/194/uploads/ckeditor/picture/data/2772/near-me-logo.png" width="24" /></a>
+            </p>
+        </div>
     </div>
-  </div>
 </footer>
