Environment class on HTML Common header in The Volte for dashboard and rest of app

--- a/app/views/layouts/instance_admin.html.haml
+++ b/app/views/layouts/instance_admin.html.haml
@@ -1,8 +1,9 @@
+- html_class = "env-#{Rails.env} no-js"
 !!!
-%html
+%html{ class: html_class }
   %head
     %meta{name: 'app-server', content: ENV['HOSTNAME']}
-    
+
     %title
       #{platform_context.name} - Marketplace Admin
     %meta{:'http-equiv' => "Content-type", :content=> "text/html;charset=UTF-8"}
