--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,8 +1,9 @@
+- html_class = "env-#{Rails.env} no-js"
 !!!
-%html
+%html{ class: html_class }
   %head
     %meta{name: 'app-server', content: ENV['HOSTNAME']}
-    
+
     %title
       Desks Near Me - Admin
     = csrf_meta_tag
