--- a/app/views/layouts/instance_wizard.html.haml
+++ b/app/views/layouts/instance_wizard.html.haml
@@ -1,5 +1,6 @@
+- html_class = "env-#{Rails.env} no-js"
 !!!
-%html{dir: "ltr", lang: "en-US", xmlns: "http://www.w3.org/1999/xhtml"}
+%html{ class: html_class }
   %head
     %meta{name: 'app-server', content: ENV['HOSTNAME']}
 
