--- a/app/views/layouts/password_protected.html.haml
+++ b/app/views/layouts/password_protected.html.haml
@@ -1,5 +1,6 @@
+- html_class = "env-#{Rails.env} no-js"
 !!!
-%html
+%html{ class: html_class }
   %head
     %meta{name: 'app-server', content: ENV['HOSTNAME']}
 
