--- a/lib/tasks/volte/liquid_views/home--index.liquid
+++ b/lib/tasks/volte/liquid_views/home--index.liquid
@@ -56,7 +56,7 @@ partial: false
               </li>
             </ul>
           </div>
-          <input class="search-input" name="query" placeholder="Search" type="text" /><button class="volte-icon-search"></button>
+          <input class="search-input" name="query" placeholder="Search" type="text" /><button><i class="volte-icon-search"></i></button>
         </div>
       </form>
     </div>
