NM 5619 Fix top nav css class

--- a/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/volte/liquid_views/layouts--theme_header.liquid
@@ -5,7 +5,7 @@
             <nav role="nav">
                 <button class="topnav-toggle animated zoomIn">☰</button>
                 {% if current_user == blank %}
-                    <ul>
+                    <ul class="nav main-menu">
                         <li class="active">
                             <a data-modal="true" data-modal-class="sign-up-modal" data-modal-overlay-close="disabled" data-href="/users/sign_up?return_to=%2Ftransactable_types%2Ffashion-item%2Flist" href="#">List your items</a>
                         </li>
