--- a/lib/tasks/litvault/content_holders/head.liquid
+++ b/lib/tasks/litvault/content_holders/head.liquid
@@ -3,4 +3,6 @@ name: Litvault CSS
 inject_pages: any_page
 position: head_bottom
 ---
-<link rel='stylesheet' media='screen' href='https://rawgit.com/mdyd-dev/marketplaces/master/litvault/css/litvault.css'>
+<!-- <link rel='stylesheet' media='screen' href='https://rawgit.com/mdyd-dev/marketplaces/master/litvault/css/litvault.css'> -->
+
+<link rel='stylesheet' media='screen' href='http://localhost/~Chris/marketplaces/litvault/css/litvault.css'>
