NM-5605 Litvault Home page

--- a/lib/tasks/litvault/liquid_views/search--list.liquid
+++ b/lib/tasks/litvault/liquid_views/search--list.liquid
@@ -1,3 +1,6 @@
+---
+partial: false
+---
 <section class="search-form-wrapper">
     <div class="search-form-inner">
         <div class="search-form-type-toggle">
@@ -17,7 +20,7 @@
                 <div class="state-filter">
                     <label for="field-state" class="struct-label">Filter by state</label>
                     <span class="nice-select">
-                        <select name="state" id="field-state" class="unstyled-select">
+                        <select name="state" id="field-state">
                             <option value="">By state</option>
                             <option value="AZ">AZ</option>
                             <option value="CA">CA</option>
@@ -54,7 +57,7 @@
                 <div>
                     <label for="search-order">Sort by:</label>
                     <span class="nice-select">
-                        <select id="search-order" name="search-order" class="unstyled-select">
+                        <select id="search-order" name="search-order">
                             <option selected value="1">Newest</option>
                             <option selected value="2">Oldest</option>
                         </select>
