--- a/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
+++ b/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
@@ -1,61 +1,48 @@
-<h2>
-  <span class='first-line'>The Easiest Way For Experienced Trial</span>
-  Lawyers To Get <span class='text-highlight'>Quality Contingent Fee Referrals</span></span>
-</h2>
-
-<form action="/search" class="home_search search-box {{ class_name }}" method="get">
-  <div class="input-wrapper">
-
-    <div class="row-fluid">
-      {% for transactable_type in transactable_types %}
-        <div class="transactable-type-search-box" data-transactable-type-id="{{ transactable_type.select_id }}" {% if forloop.first != true %} style=" display: none;" {% endif%}>
-          {% include 'home/search/fulltext' %}
-          {% include 'home/search/custom_attributes' transactable_type:transactable_type %}
+<form action="/search" class="home-search no_inheritance" method="get">
+    <div class="form-fields">
+        <div class="form-field form-field-query">
+            <label for="form-field-query">Search for</label>
+            <input id="form-field-query" class="query" name="query" placeholder="Enter keywords..." type="text">
         </div>
-      {% endfor %}
 
-      {% if transactable_types.size > 1 %}
-        {% if platform_context.tt_select_type == 'dropdown' %}
-          <div class="span2 transactable-select-wrapper">
-            <select class="no-icon select2 transactable_select" data-transactable-type-picker name="transactable_type_selector">
-              {% for transactable_type in transactable_types %}
-                <option value="{{ transactable_type.select_id }}">{{ transactable_type.name }}</option>
-              {% endfor %}
-            </select>
-          </div>
-        {% endif %}
-      {% endif %}
-      <input name="transactable_type_id" type="hidden" value="{{ transactable_type.id }}">
+        <div class="form-field form-field-state">
+            <label for="form-field-state">By State</label>
+            {% for ca in transactable_types.first.custom_attributes %}
 
-      <div class="span2 pull-right submit-button-wrapper">
-        <a class="btn btn-green btn-large search-button" data-disable-with="{{ 'homepage.disabled_buttons.search' | translate }}" rel="submit" href="">
-          <span class="ico-search"></span>
-          {{ 'homepage.buttons.search' | translate }}
-        </a>
-        <div id="suggest_location" style="display: none"></div>
-      </div>
-    </div>
-
-    {% if transactable_types.size > 1 and platform_context.tt_select_type == 'radio' %}
-      <div class="row-fluid">
-        <div class="span10">
-          <div class="search-transactable--radio">
-            {% for transactable_type in transactable_types reversed %}
-            <input type="radio" name="transactable_type_selector" value="{{ transactable_type.select_id }}" id="transactable-type-{{ transactable_type.id }}" {% if forloop.first == true %} checked {% endif %} data-transactable-type-picker >
-            <label for="transactable-type-{{ transactable_type.id }}">
-              {% capture i18n_key %}transactable_types.{{ transactable_type.name | parameterize:'_' }}.labels.search{% endcapture %}
-              {{ i18n_key | translate }}
-            </label>
+            <span class="select-a">
+                <select name='lg_custom_attributes[{{ca.name}}][]' id="form-field-state" class="unstyled-select">
+                    <option value="">By State</option>
+                    {% for value in ca.valid_values %}
+                    <option value='{{ value }}'>{{ value }}</option>
+                    {% endfor %}
+                </select>
+            </span>
             {% endfor %}
-          </div>
         </div>
-      </div>
-    {% endif %}
-  </div>
-  <input type="hidden" name="transactable_type_class">
-  <input type="submit"/>
-</form>
 
-<script type="text/javascript">
-  $(document).ready(function() { $(document).trigger('init:homepageranges.nearme'); });
-</script>
+
+        <fieldset>
+            <legend>Case Type</legend>
+
+            <ul>
+                {% for transactable_type in transactable_types %}
+
+                {% if not_first_item == blank %}
+                    {% assign not_first_item = true %}
+                    {% assign checked = ' checked ' %}
+                {% else %}
+                    {% assign checked = '' %}
+                {% endif %}
+
+                <li class="radio-a">
+                    <input type="radio" name="transactable_type_id" value="{{ transactable_type.id }}" id="transactable-type-{{ transactable_type.id }}"{{ checked }}>
+                    <label for="transactable-type-{{ transactable_type.id }}">{{ transactable_type.name }}</label>
+                </li>
+                {% endfor %}
+            </ul>
+        </fieldset>
+    </div>
+    <div class="form-action">
+        <button type="submit" class="button-a">Search</button>
+    </div>
+</form>
