NM-5164 Add wish list items liquid view for lister and enquirer

--- a/lib/tasks/litvault/liquid_views/dashboard--company--users--collaborations_for_current_user.liquid
+++ b/lib/tasks/litvault/liquid_views/dashboard--company--users--collaborations_for_current_user.liquid
@@ -1,17 +1,17 @@
 ---
 partial: false
 ---
-<div class="project-invite-content">
+<div class="case-invite-content">
   <header>
-    <h2>Invite to project</h2>
+    <h2>Invite to case</h2>
     <button type="button" data-close>Cancel</button>
   </header>
 
-  {% assign collaborators = current_user | find_collaborators_for_user_projects: user %}
+  {% assign collaborators = current_user | find_collaborators_for_user_transactables: user %}
 
   {% if collaborators.size > 0 %}
-    <div class="existing-projects" data-delete-url="{{ 'dashboard_company_transactable_collaborators_path' | generate_url }}">
-      <h3>{{ user.name }} is already invited to following projects:</h3>
+    <div class="existing-cases" data-delete-url="{{ 'dashboard_company_transactable_collaborators_path' | generate_url }}">
+      <h3>{{ user.name }} is already invited to following cases:</h3>
       <ul>
         {% for collaborator in collaborators %}
         <li>
@@ -27,20 +27,20 @@ partial: false
 
   {% if user.pending_transactables_for_current_user.size > 0 %}
 
-    <p><strong>{{ user.name }}</strong> will be invited to your project.</p>
+    <p><strong>{{ user.name }}</strong> will be invited to your case.</p>
 
-    <p>Please select the project from the list below:</p>
+    <p>Please select the case from the list below:</p>
 
     <form method="post" action="{{ 'dashboard_company_transactable_collaborators_path' | generate_url }}">
       <input type="hidden" name="transactable_collaborator[user_id]" value="{{ user.id }}">
       <input type="hidden" name="authenticity_token" value="{{ form_authenticity_token }}" />
 
       <div class="control-group">
-        <label for="projects-list" class="control-label">My projects</label>
+        <label for="cases-list" class="control-label">My cases</label>
         <span class="select-a">
-          <select id="projects-list" name="transactable_collaborator[transactable_id]" class="unstyled-select">
-            {% for project in user.pending_transactables_for_current_user %}
-            <option value="{{ project.id }}">{{ project.name }}</option>
+          <select id="cases-list" name="transactable_collaborator[transactable_id]" class="unstyled-select">
+            {% for case in user.pending_transactables_for_current_user %}
+            <option value="{{ case.id }}">{{ case.name }}</option>
             {% endfor %}
           </select>
         </span>
@@ -53,23 +53,23 @@ partial: false
 
   {% elsif current_user.has_pending_transactables? && user.pending_transactables_for_current_user.size == 0 %}
 
-    <p>This user has been invited to all of your projects already.</p>
+    <p>This user has been invited to all of your cases already.</p>
 
-    <p>Would you like to add a new project now?</p>
+    <p>Would you like to add a new case now?</p>
 
     <div class="actions">
-      <a href="{{ platform_context.transactable_types[0].new_transactable_path }}" class="button-a">Add a project</a>
+      <a href="{{ platform_context.transactable_types[0].new_transactable_path }}" class="button-a">Add a case</a>
       <button type="button" class="button-b" data-close>Cancel</button>
     </div>
 
   {% else %}
 
-    <p>In order to invite a SME to a project, you must first create one.</p>
+    <p>In order to invite a SME to a case, you must first create one.</p>
 
-    <p>Would you like to add a project now?</p>
+    <p>Would you like to add a case now?</p>
 
     <div class="actions">
-      <a href="{{ platform_context.transactable_types[0].new_transactable_path }}" class="button-a">Add a project</a>
+      <a href="{{ platform_context.transactable_types[0].new_transactable_path }}" class="button-a">Add a case</a>
     </div>
 
   {% endif %}
