--- a/lib/tasks/volte/content_holders/body_bottom.liquid
+++ b/lib/tasks/volte/content_holders/body_bottom.liquid
@@ -4,5 +4,15 @@ inject_pages: any_page
 position: body_bottom
 ---
 <script src="https://rawgit.com/mdyd-dev/marketplaces/master/volte/dist/js/volte.js" async></script>
+<script>
+  function showCustomAttributes(attribute){
+    $('[data-visibility-dependent]').hide().attr('disabled', true)
+    if(attribute.data('show-field') == 'value-dependent'){
+      $('[data-visibility-dependent="' + attribute.val().toLowerCase() + '"').show().attr('disabled', false)
+    }
+  }
+  $('[data-show-field]').on('change', function(){ showCustomAttributes($(this))});
 
+  $('[data-show-field]').each(function(){showCustomAttributes($(this));});
+</script>
 <!-- <script src="http://localhost:8000/js/volte.js" async></script> -->
