--- a/app/views/instance_admin/manage/transfers/show.html.haml
+++ b/app/views/instance_admin/manage/transfers/show.html.haml
@@ -116,7 +116,8 @@
             %tr
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.reference')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.id')
-              %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.lessor')
+              %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.lister')
+              %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.enquirerer')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.amount')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.payment_state')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.payment_details')
@@ -126,7 +127,9 @@
               %tr
                 %td= payment.payable_type
                 %td= payment.payable_id
-                %td= payment.payable.try(:user).try(:name)
+                %td= link_to payment.payable.creator.name, edit_instance_admin_manage_user_path(payment.payable.creator)
+                %td= link_to payment.payer.name, edit_instance_admin_manage_user_path(payment.payer)
+
                 %td= number_to_currency_symbol(payment.currency, Money.new(payment.amount))
                 %td= payment.state.capitalize
                 %td= link_to 'Payment',  instance_admin_manage_payment_path(payment)
