--- a/lib/tasks/litvault/liquid_views/home--index.liquid
+++ b/lib/tasks/litvault/liquid_views/home--index.liquid
@@ -51,7 +51,7 @@ partial: false
         </div>
 
         <p class="more-a">
-            <a href="/how-it-works" class="button-a button-inverted">Learn More</a>
+            <a href="/how-it-works" class="button-a inverted">Learn More</a>
         </p>
     </div>
 </section>
