--- a/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
+++ b/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
@@ -1,5 +1,6 @@
 <form action="/search" class="home-search no_inheritance" method="get">
     <div class="form-fields">
+        <input type="hidden" name="transactable_type_class" value="TransactableType">
         <div class="form-field form-field-query">
             <label for="form-field-query">Search for</label>
             <input id="form-field-query" class="query" name="query" placeholder="Enter keywords..." type="text">
