--- a/lib/tasks/litvault/liquid_views/registrations--buyer_footer.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations--buyer_footer.liquid
@@ -1,1 +1,1 @@
-<p class="role-switch">Are you looking for experts instead? <a href="/users?role=seller&amp;return_to=/transactable_types/project/list">I want to hire</a></p>
+<p class="role-switch">Do you want to refer cases instead? <a href="/users?role=seller&amp;return_to=/transactable_types/individual_cases/list">Refer Cases</a></p>
