--- a/lib/tasks/litvault/liquid_views/registrations--seller_footer.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations--seller_footer.liquid
@@ -1,1 +1,1 @@
-<p class="role-switch">Are you looking for projects instead? <a href="/users?role=buyer">I want to work</a></p>
+<p class="role-switch">Are you looking for cases instead? <a href="/users?role=buyer">Work on Cases</a></p>
